# HMatrix

./: .gitignore  BinaryTree.h  CMakeLists.txt  HMatrix.h  Matrix.h  MatrixType.h  QuadTree.h  TODO.txt  adaptiveCrossApproximation.h  build.h  cluster.cpp  cluster.h  main.cpp  old_main.h  routines.h
HMatrix/: HMatrix.h  HMatrixNode.h  HMatrixType.h  HMatrixUtils.h  LUHMatrix.h  LowRank.h  SmallRank.h  SubMatrix.h  adaptiveCrossApproximation.h  lu.h  routines.h  toHMatrix.h
HMatrix/_test/: HMatrixUtils_test.cpp
arrayFunctor/: ArrayFunctor.h  FullMatrix.h  GaussianMatrix.h
blas/: HMatrix.h
cluster/: cluster.cpp  cluster.h
compression/: adaptiveCrossApproximation.h  routines.h  toHMatrix.h
compression/_test/: adaptiveCrossApproximation_test.cpp
doc/: README.txt  conf.py  doxygen-breathe.conf  doxygen.conf  index.rst  performance.txt
doc/cluster/: cluster.rst  final.rst  hmatrixtree.rst
doc/hmatrix/: hmatrix.rst
doc/omnigraffle/: diameter.graffle  hmatrix-hierarchy.graffle  hmatrix-tree.graffle  hmatrix.graffle  points-ordered.graffle  points-tree.graffle  points.graffle
gtest/tmp/: b.npy
hmatrix/: HMatrix.h  HMatrixNode.h  HMatrixType.h  HMatrixUtils.h  LowRank.h
hmatrix/_test/: HMatrixUtils_test.cpp
linearAlgebra/blas/: OldHMatrix.h  dot.h  hblas.cpp  hblas.h  hdot.h  hsolve.cpp  hsolve.h
linearAlgebra/factorization/: LU.cpp  LU.h  lowRankAddition.cpp  lowRankAddition.h  lowRankApproximation.cpp  lowRankApproximation.h  luDecomposition.cpp  luDecomposition.h
linearAlgebra/factorization/_test/: luDecomposition_test.cpp
linearAlgebra/factorization/old/: LUHMatrix.h  LUHMatrixNode.h  lu.h
luhmatrix/: LuHMatrix.h  LuHMatrixNode.h  blas.h  hblas.cpp  hblas.h  lu.cpp  lu.h  solve.cpp  solve.h
luhmatrix/_test/: solve_test.cpp
matrixFunctor/: GaussianMatrix.h  MatrixFunctor.h
src/: old_main.h
src/core/: ElasticProperties.h  Mesh.h  SegmentData.h  Utilities.cpp  Utilities.h
src/elasticity/: Simplified3D.cpp  Simplified3D.h
